--- a/app/views/pages/_intro_text.html.haml
+++ b/app/views/pages/_intro_text.html.haml
@@ -1,4 +1,9 @@
-.intro_text.text-center.justify-content-md-center
-  %p Hi! I am Dave, the Chief Instigator at Humble Daisy, Inc , a privately funded company that I cofounded with my wife Michael in 2002. Humble Daisy's goal is to provide simple and elegant, user-centered solutions to facilitate personal and professional success. I also work as an Systems Architect (I hate that title) at the University of Michigan in Ann Arbor. I develop technology solutions that facilitate the instructional mission at the University. Through both of my roles, I enjoy learning about and helping educators to teach better and provide better learning possibilities to their students. I have always been passionate about education, and believe that it can be the most empowering and fulfilling route towards a better future.
+.intro-text
+  %p Hi! I am Dave, a software developer and product manager in Ann Arbor.
 
-  %p I want to make something new every day. Some days, I make software. Other days, I make a difference. Some days, I get to do both.
+  -# I am also the Chief Instigator at Humble Daisy, Inc , a privately funded company that I cofounded with my wife Michael in 2002.
+  My goal is to provide simple and elegant, user-centered solutions to facilitate personal and professional success. I currently work as an Systems Architect (I hate that title) at the
+  = link_to 'University of Michigan in Ann Arbor.', umich_path, target: '_blank'
+  I develop technology solutions that facilitate the instructional mission at the University. Through both of my roles, I enjoy learning about and helping educators to teach better and provide better learning possibilities to their students. I have always been passionate about education, and believe that it can be the most empowering and fulfilling route towards a better future.
+
+  %p I endeavor to make something new every day. Some days, I make software. Other days, I make a difference. Some days, I get to do both.
