--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -2,7 +2,7 @@
 / Header
 .mast-header.-mx-16.-mt-12
 
-  .intro-text
+  .mast-header-text
     .intro-lead-in Chief Instigator, passionate developer, mentor.
     .intro-heading Let's work together!
     %a.page-scroll.btn.btn-xl{:href => "#skills"} Tell Me More
